# MonadForge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.ko.md  README.md  build-webui-win.bat  inference.py  install.ps1  pyproject.toml  setup-win.bat  start-webui-win.bat  tasks.py  train.py
archive/: toread.md
bench/: _anima.py
configs/: base.toml
custom_nodes/comfyui-anima-directedit/: README.md  __init__.py  nodes.py  pyproject.toml
custom_nodes/comfyui-anima-tagger/: README.md  __init__.py  nodes.py  pyproject.toml
docs/: README.md  multi_model_support.md  roadmap.md
examples/: 01_generate.py  02_generate_with_lora.py  03_config_and_network.py  04_train_lora.py  05_load_models.py  06_vae_and_dataset.py  README.md
gui/: __init__.py  adapter_tab.py  app.py  config_tab.py  daemon.py  explanations.py  gui_settings.json  i18n.py  image_tab.py  system_dialog.py
networks/: CLAUDE.md  __init__.py  dcw.py  lora_save.py
preprocess/: cache_latents.py  cache_pe_encoder.py  cache_pooled_text.py  cache_text_embeddings.py  generate_masks.py  generate_masks_mit.py  resize_images.py
scripts/: distill_modulation.py  distill_spd.py  distill_turbo.py  edit.py  sync_vendor.py  train_anima_tagger.py  update.py
tests/: test_chimera_node_loader.py  test_fera_fecl_handler.py  test_global_router.py  test_gui_variants.py  test_identity_pairs.py  test_lora_custom_autograd.py  test_loss_registry.py  test_network_cfg.py  test_network_registry.py  test_per_channel_scaling_roundtrip.py  test_tag_groups.py  test_wd_tagger_service.py
webui/: __init__.py  __main__.py  server.py
(+226 files in other folders)
