[project]
name = "comfyui-anima-directedit"
description = "Anima DirectEdit for ComfyUI: image + 'tag to add' -> edited image. Performs flow inversion + delta_z-anchored resampling on stock MODEL/CLIP/VAE sockets. Pair with the comfyui-anima-tagger package for image-driven psi_src derivation, or supply psi_src directly via prompt_src_override."
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/anima_lora/tree/main/custom_nodes/comfyui-anima-directedit"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Anima DirectEdit"
Icon = ""
